# Arduino_Core_STM32

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis.yml.old  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License.md  MCCI-ADDING-BOARDS.md  README.md  README_CMAKE.md  README_stm32duino.md  SECURITY.md  boards.json  boards.template  boards.txt  generate_boards.bri  keywords.txt  node-red.txt  package.json  platform.txt  post_install.bat  programmers.txt
CI/update/templates/: CMakeLists.txt  PeripheralPins.c  PinNamesVar.h  boards_db.cmake  boards_entry.txt  easy_cmake.cmake  generic_clock.c  stm32_def_build.h  stm32yyxx_hal_conf.h  stm32yyxx_ll.h  stm32yyxx_ll_ppp.h  stm32yyxx_zz_ppp.c  system_stm32yyxx.c  variant_generic.cpp  variant_generic.h
cmake/templates/: CMakeLists.txt  boards_db.cmake  easy_cmake.cmake
cores/arduino/: Arduino.h  CMakeLists.txt  Client.h  HardwareSerial.cpp  HardwareSerial.h  HardwareTimer.cpp  HardwareTimer.h  IPAddress.cpp  IPAddress.h  IPv6Address.cpp  IPv6Address.h  Print.cpp  Print.h  Printable.h  RingBuffer.cpp  RingBuffer.h  Serial.cpp  Serial.h  Server.h  SoftwareSerial.cpp  SoftwareSerial.h  Stream.cpp  Stream.h  Tone.cpp  Tone.h  UARTClass.cpp  UARTClass.h  USARTClass.cpp  USARTClass.h  USB.cpp  USB.h  USBMscHandler.h  USBSerial.cpp  USBSerial.h  Udp.h  VirtIOSerial.cpp  VirtIOSerial.h  WCharacter.h  WInterrupts.c  WInterrupts.cpp  (+44 more)
cores/arduino/avr/: dtostrf.c  dtostrf.h  pgmspace.h
cores/arduino/stm32/: LowPower.c  LowPower.h  PeripheralPins.h  PinAF_STM32F1.h  PinConfigured.c  PinConfigured.h  PinNames.h  PinNamesTypes.h  PortNames.c  PortNames.h  analog.c  analog.cpp  analog.h  backup.h  bootloader.c  bootloader.h  clock.c  clock.h  core_callback.c  core_callback.h  digital_io.c  digital_io.h  dma.c  dma.h  dwt.c  ethernet.h  hal_uart_emul.c  hal_uart_emul.h  hw_config.c  hw_config.h  interrupt.c  interrupt.cpp  interrupt.h  lock_resource.h  low_power.c  low_power.h  no_serial.cpp  no_serial.h  null_serial.cpp  null_serial.h  (+46 more)
libraries/: CMakeLists.txt
libraries/Adafruit_BME280_Library/: Adafruit_BME280.cpp  Adafruit_BME280.h  LICENSE  README.md  library.properties
libraries/Adafruit_BME680_Library/: library.properties
libraries/Adafruit_BusIO/: Adafruit_I2CDevice.cpp  Adafruit_SPIDevice.cpp  Adafruit_SPIDevice.h  library.properties
libraries/Adafruit_Unified_Sensor/: Adafruit_Sensor.cpp  Adafruit_Sensor.h  README.md  library.properties
libraries/Basic_Examples/: library.properties
libraries/CMSIS_DSP/: CMakeLists.txt  keywords.txt  library.properties
libraries/CMSIS_DSP/src/: CMSIS_DSP.h
libraries/CapacitiveSensor-0.5.1/: CapacitiveSensor.cpp  CapacitiveSensor.h  keywords.txt  library.properties
libraries/DMA/: kewords.txt  library.properties
libraries/DMA/src/: DMATransfer.cpp  DMATransfer.h
libraries/EEPROM/: CMakeLists.txt  EEPROM.h  README.md  library.properties
libraries/EEPROM/src/: EEPROM.h
libraries/EchoStar_Term_Examples/: library.properties
libraries/Echo_Services/: keywords.txt  library.properties
libraries/Echo_Services/src/: es_sensors.cpp  es_sensors.h
libraries/Ethernet/: README.md  library.properties
libraries/Ethernet/src/: Dhcp.cpp  Dhcp.h  Dns.cpp  Ethernet.cpp  Ethernet.h  EthernetClient.cpp  EthernetClient.h  EthernetUdp.cpp  EthernetUdp.h
libraries/Extended_Examples/: library.properties
libraries/FatFs/: library.properties
libraries/FatFs/src/: diskio.c  ff_gen_drv.c  ff_gen_drv.h  st_readme.txt
libraries/Firmata/: Boards.h  Firmata.cpp  Firmata.h  FirmataConstants.h  library.properties  readme.md  release.sh
libraries/Firmata/extras/: revisions.txt
libraries/Firmata/test/: readme.md
libraries/Firmata/utility/: WiFiStream.h  (+6 more)
libraries/GSM/: library.properties
libraries/Grove-3-Axis-Digital-Accelerometer-2g-to-16g-LIS3DHTR/: CONTRIBUTING.md  LICENSE  README.md  keywords.txt  library.properties
libraries/I3C/: CMakeLists.txt  keywords.txt  library.properties
libraries/IWatchdog/: CMakeLists.txt  README.md  keywords.txt  library.properties
libraries/Keyboard/: CMakeLists.txt  README.adoc  library.properties
libraries/Kionix_KX023-main/: README.md  library.properties
libraries/LiquidCrystal/: library.properties
libraries/LwIP/: UPGRADING  keywords.txt  library.properties  st_readme.txt
libraries/Mouse/: CMakeLists.txt  README.adoc  keywords.txt  library.properties
libraries/Mouse_STM32/: CMakeLists.txt  keywords.txt  library.properties
libraries/NativeEthernet/: AUTHORS  README.adoc  README.md  library.properties
libraries/Native_Ethernet/: library.properties
libraries/Other_Examples/: library.properties
libraries/RGB_LED_TLC59731/: CMakeLists.txt  keywords.txt  library.properties
libraries/SD/: library.properties
libraries/SPI/: CMakeLists.txt  README.md  SPI.cpp  SPI.h  keywords.txt  library.properties
libraries/STM32LowPower-1.2.5/: README.md  keywords.txt  library.json  library.properties
libraries/STM32RTC-1.5.0/: .editorconfig  .gitattributes  README.md  keywords.txt  library.json  library.properties
libraries/Servo/: CMakeLists.txt  Servo.cpp  Servo.h  ServoTimers.h  library.properties
libraries/SoftwareSerial/: CMakeLists.txt  library.properties
libraries/SrcWrapper/: CMakeLists.txt  dma.c  keywords.txt  library.properties
libraries/SubGhz/: CMakeLists.txt  README.md  keywords.txt  library.properties
libraries/TFT/: library.properties
libraries/USBDevice/: CMakeLists.txt  keywords.txt  library.properties
libraries/USBHIDComposite/: README.md  USBHIDComposite.cpp  keywords.txt  library.properties  usbd_desc.c  usbd_desc_hid_composite.c  usbd_hid_composite.c  usbd_hid_composite.h
libraries/USBSerial/: USBSerial.cpp  USBSerial.h  library.properties  usb_device_cdc.c  usb_serial.cpp  usbd_cdc_if.c
libraries/VirtIO/: CMakeLists.txt  keywords.txt  library.properties
libraries/Watchdog/: README.md  Watchdog.cpp  Watchdog.h  keywords.txt  library.properties
libraries/WiFi/: library.properties
libraries/Wire/: CMakeLists.txt  Wire.cpp  Wire.h  keywords.txt  library.properties
(+14029 files in other folders)
