# just a trampoline to avoid overwhelming the main CMakeLists.txt

add_subdirectory(CMSIS_DSP)
add_subdirectory(EEPROM)
add_subdirectory(IWatchdog)
add_subdirectory(Keyboard)
add_subdirectory(Mouse)
add_subdirectory(RGB_LED_TLC59731)
add_subdirectory(SPI)
add_subdirectory(Servo)
add_subdirectory(SoftwareSerial)
add_subdirectory(SrcWrapper)
add_subdirectory(Wire)
